<resources>
    <string name="app_name">Wission</string>

    <string name="welcome_and_sign_up">Welcome and Sign In</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="we_never_post_anything_without_your_permission">We never post anything without your permission!</string>
    <string name="or">Or</string>
    <string name="sign_in">SignIn using</string>
    <string name="email_address_mobile_number">Enter email Address/Mobile Number</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have any Account?</string>
    <string name="create">Create</string>
    <string name="label_sign_in">SignIn</string>
    <string name="label_dummy_label_not_in_used">Dummy click not in used.</string>
    <string name="err_email_phone_incorrect">Please enter the email/phone correct.</string>
    <string name="err_password">Password must contain at least one capital letter, one small and one digit. (e.g Sumit007)</string>
    <string name="email_phone_required">Email/Phone is required</string>
    <string name="password_required">Password is required</string>
    <string name="api_key_value">AIzaSyCV9USRVKsMKPmJv2jW485Fn3yj5YYp1Os</string>
    <string name="error_player">Player Error</string>
    <string name="label_home">Wission</string>
    <string name="write_comments">Write comments..</string>
    <string name="search">Search...</string>
    <string name="err_empty_field_not_allowed">Please enter text first</string>
    <string name="title_activity_home_contoller">HomeContollerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
